--- a/gestiondocente/src/main/webapp/css/style.css
+++ b/gestiondocente/src/main/webapp/css/style.css
@@ -11,3 +11,13 @@
    text-align: center;
    padding: 10px;
  }
+ .navbar-default {
+ 
+    display: inline-block;
+    float: none;
+   
+}
+
+.navbar-defaul .navbar-collapse {
+    text-align: center;
+}
