--- a/gestiondocente/src/main/webapp/css/style.css
+++ b/gestiondocente/src/main/webapp/css/style.css
@@ -1,4 +1,4 @@
-@CHARSET "ISO-8859-1";
+@CHARSET "UTF-8";
  /* Set black background color, white text and some padding */
  .footer {
    background-color: #555;
