--- a/gestiondocente/src/main/webapp/css/styles.css
+++ b/gestiondocente/src/main/webapp/css/styles.css
@@ -15,7 +15,7 @@ nav ul{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:#77f9ec;
+    background-color:#09c1af;
     display:list-item;
     position: relative;
 	
@@ -29,15 +29,16 @@ nav li a{
 	float: left;
 	position: relative;
 	text-decoration: none;
-	background-color:#77f9ec;
+	background-color:#09c1af;
 	padding: 10px 10px;
     text-align: center;
     display: inline-block; 
 }
 
 nav a:HOVER {
-	color: #00ffff;
-	background-color:#000080;
+	color: #09c1af;
+	background-color:#77f9ec;
+	
 }
 
 main ul {
@@ -70,59 +71,77 @@ main a:HOVER {
 	border-style: solid;
 	text-align: center;
 }
-.formularioLogin{
-	border-color: #71b8ff;
-	border-style: solid;
-	width: 30%;
+.formulario{
+	border-radius:10px;
+	width: 25%;
 	margin: 0 auto;
 	text-align: center;
-	 background-color: #71b8ff;
+	background-color: #71b8ff;
 	color: #f1f1f1;
-
+	 box-shadow: inset 0px 0px 50px #71b8ff,
+                    0px 0px 50px #71b8ff; 
 }
- .formulario{
+ .formulario h2{
+ 	padding: 10px 0 0 0;
+ }
+ .formularioInput{
     padding: 12px 20px;
     box-sizing: border-box;
  	width: 100%;
  	background-color: #f1f1f1;
  	display: block;
+ 	
  }
- .formulario [type=text], [type=password], [type=submit]{
+ .formularioInput [type=text], [type=password], [type=submit]{
     padding: 12px 20px;
  	width: 80%;
  	border-radius: 4px;
  	border: none;
  	
  }
- .formulario [type=submit]{
+ .formularioInput [type=submit]{
 	background-color: #71b8ff;
 	color: #f1f1f1;
 }
 
-.formulario label {
-	background-color: #71b8ff;
+.formularioInput label {
+background-color: #71b8ff;
 	color: #f1f1f1;
-	 padding: 10px 15px;
+	 padding: 10px 20px 10px 10px;
  	border: none;
  	display: block;
  	float:left;
- 	margin:  0 0 0 6%;
- 	width: 15%;
+ 	margin:  0 0 0 4%;
+ 	width: 15%;	
+ 	
  	
 }
-.formulario select {
+.formularioInput select {
 	
 	 padding: 12px 20px;
  	border: none;
  	display: block;
  	width: 67%;
 }
+.finalForm{
+	border-radius:0px 0px 8px 8px;
+}
 
 .cerrarSesion{
-	background-color: #71b8ff;
-	color: #f1f1f1;
  	float:right;
  	position: relative;
  	display: inline-block;
 }
+.userLogin{
+	padding: 10px 10px;
+	color: #f1f1f1;
+}
+
+footer{
+	 width: 99%;
+    bottom: 5px;
+    position: absolute;
+	
+}
+
  	
